[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-dlq-triage"
version = "1.0.0"
description = "OpenEnv environment for diagnosing and recovering from tool-call failures"
authors = [{name = "Pulagalla Sai Kiran"}]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools]
packages = ["dlq_triage", "dlq_triage.graders"]
package-dir = {"" = "src"}
